; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yyset_column.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yyset_column.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.yyguts_t = type { i32 }

@YY_CURRENT_BUFFER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"yyset_column called with no buffer\00", align 1
@yycolumn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @yyset_column(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.yyguts_t*, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to %struct.yyguts_t*
  store %struct.yyguts_t* %7, %struct.yyguts_t** %5, align 8
  %8 = load i32, i32* @YY_CURRENT_BUFFER, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = call i32 @YY_FATAL_ERROR(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i32, i32* %3, align 4
  store i32 %13, i32* @yycolumn, align 4
  ret void
}

declare dso_local i32 @YY_FATAL_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
